--- a/charts/identity-server/values.dev.yaml
+++ b/charts/identity-server/values.dev.yaml
@@ -1,9 +1,9 @@
 auth-admin-web:
   enabled: true
   env:
-    BASE_URL: 'https://identity-server.dev01.devland.is/admin'
-    IDENTITYSERVER_DOMAIN: 'identity-server.dev01.devland.is'
-    NEXTAUTH_URL: 'https://identity-server.dev01.devland.is/admin/api/auth'
+    BASE_URL: 'https://ids-duende-identity-server.dev01.devland.is/admin'
+    IDENTITYSERVER_DOMAIN: 'https://ids-duende-identity-server.dev01.devland.is'
+    NEXTAUTH_URL: 'https://ids-duende-identity-server.dev01.devland.is/admin/api/auth'
     NEXT_PUBLIC_BACKEND_URL: '/backend'
     NODE_OPTIONS: '--max-old-space-size=208'
     SERVERSIDE_FEATURES_ON: 'INAO_Client'
@@ -180,7 +180,7 @@ services-auth-admin-api:
     DB_NAME: 'servicesauth'
     DB_REPLICAS_HOST: 'dev-vidspyrna-aurora.cluster-ro-c6cxecmrvlpq.eu-west-1.rds.amazonaws.com'
     DB_USER: 'servicesauth'
-    IDENTITY_SERVER_ISSUER_URL: 'https://identity-server.dev01.devland.is'
+    IDENTITY_SERVER_ISSUER_URL: 'https://ids-duende-identity-server.dev01.devland.is'
     NODE_OPTIONS: '--max-old-space-size=208'
     SERVERSIDE_FEATURES_ON: 'INAO_Client'
   grantNamespaces: []
@@ -342,7 +342,7 @@ services-auth-public-api:
     DB_REPLICAS_HOST: 'dev-vidspyrna-aurora.cluster-ro-c6cxecmrvlpq.eu-west-1.rds.amazonaws.com'
     DB_USER: 'servicesauth'
     IDENTITY_SERVER_CLIENT_ID: '@island.is/clients/auth-api'
-    IDENTITY_SERVER_ISSUER_URL: 'https://identity-server.dev01.devland.is'
+    IDENTITY_SERVER_ISSUER_URL: 'https://ids-duende-identity-server.dev01.devland.is'
     NODE_OPTIONS: '--max-old-space-size=208'
     PUBLIC_URL: 'https://identity-server.dev01.devland.is/api'
     SERVERSIDE_FEATURES_ON: 'INAO_Client'
