--- a/.github/actions/package.json
+++ b/.github/actions/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@fluffy-spoon/substitute": "^1.208.0",
     "@octokit/rest": "18.12.0",
+    "@testing-library/cypress": "8.0.3",
     "@types/debug": "4.1.7",
     "@types/jest": "^27.4.1",
     "@vercel/ncc": "^0.33.4",
