--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - 'main'
       - 'release/**'
+      - 'pre-release/**'
     paths-ignore:
       - '**/*.md'
     tags:
@@ -36,6 +37,7 @@ jobs:
       image: public.ecr.aws/m3u4c4h9/island-is/actions-runner-public:latest
     env:
       CREATE_PATTERNS: ^release/
+      PRE_RELEASE_PATTERN: ^pre-release/
     outputs:
       GIT_BRANCH: ${{ steps.git-branch.outputs.GIT_BRANCH }}
       GIT_BRANCH_DEPLOY: ${{ steps.git-branch-deploy.outputs.GIT_BRANCH_DEPLOY }}
@@ -72,6 +74,18 @@ jobs:
           echo "GITHUB_EVENT_NAME is '$GITHUB_EVENT_NAME'"
           if [[ "$GITHUB_EVENT_NAME" == "create" ]]; then
             echo "Workflow was created because of branch creation. Branch name is '$GIT_BRANCH'"
+
+            for pre_pattern in $(echo $PRE_RELEASE_PATTERN | sed "s/,/ /g")
+            do
+                echo "Checking branch against pre_release_pattern '$pre_pattern'"
+                echo "Check if this is a pre-release and if it should generate a feature-deploy"
+                if [[ "$GIT_BRANCH" =~ $pre_pattern ]]; then
+                  echo "'$GIT_BRANCH' matches 'pre_$pattern', continuing with build"  
+                  echo "::set-output name=PRE_CHECK::feature-deploy"
+                  echo "AFFECTED_ALL=7913-$GIT_BRANCH" >> $GITHUB_ENV
+                  exit 0
+                fi
+            done
 
             for pattern in $(echo $CREATE_PATTERNS | sed "s/,/ /g")
             do
@@ -141,6 +155,12 @@ jobs:
         run: |
           node -v
           ls -l `which node`
+
+      # - name: check pre-release
+      #   if: contains(github.ref, "pre-release/")
+      #   run: |
+      #     echo "AFFECTED_ALL=7913-$GIT_BRANCH" >> $GITHUB_ENV
+      #     echo "::set-output name=PRE_CHECK::feature-deploy"
 
       - name: Git refs
         id: git_refs
