--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -156,6 +156,8 @@
 /libs/api/domains/content-search/                                                                   @island-is/stefna @island-is/juni
 /libs/api/domains/syslumenn/                                                                        @island-is/stefna
 /libs/api/domains/mailchimp/                                                                        @island-is/stefna
+/libs/api/domains/heilbrigdisstofnun-nordurlands/                                                   @island-is/stefna
+/libs/clients/heilbrigdisstofnun-nordurlands/                                                       @island-is/stefna
 /libs/clients/syslumenn/                                                                            @island-is/stefna @island-is/juni
 
 /libs/island-ui/                                                                                    @island-is/island-ui
