--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -191,15 +191,11 @@ jobs:
       - name: Checking out relevant branches for a pre-release
         if: needs.pre-checks.outputs.PRE_CHECK && needs.pre-checks.outputs.PRE_RELEASE == 'true'
         run: |
-          git checkout $GITHUB_BASE_REF
+          git checkout main
           git checkout $GITHUB_SHA
           
           git config --global user.email "ci@island.is"
           git config --global user.name "CI Bot"
-
-          BASE_SHA=$(git merge-base HEAD $GITHUB_BASE_REF)
-          echo Current base SHA is $BASE_SHA and head SHA is $HEAD_SHA
-          echo "{\"base_sha\": \"$BASE_SHA\", \"head_sha\":\"$HEAD_SHA\"}" > event.json
 
       - name: Checking out relevant branches for a PR
         if: needs.pre-checks.outputs.PRE_CHECK && needs.pre-checks.outputs.PRE_CHECK == 'feature-deploy' && needs.pre-checks-outputs.PRE_RELEASE != 'true'
