trying to set default output value

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -73,6 +73,8 @@ jobs:
           SPINNAKER_WEBHOOK_TOKEN: ${{ secrets.SPINNAKER_WEBHOOK_TOKEN }}
         run: |
           echo "GITHUB_EVENT_NAME is '$GITHUB_EVENT_NAME'"
+          echo "::set-output name=PRE_RELEASE::false"
+          
           if [[ "$GITHUB_EVENT_NAME" == "create" ]]; then
             echo "Workflow was created because of branch creation. Branch name is '$GIT_BRANCH'"
 
