--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -196,13 +196,11 @@ jobs:
           echo "BaseREF: $GITHUB_BASE_REF"
           echo "HeadREF: $GITHUB_HEAD_REF"
 
-          git checkout $GITHUB_BASE_REF
+          git checkout main
           git checkout $GITHUB_SHA
           
           git config --global user.email "ci@island.is"
           git config --global user.name "CI Bot"
-
-          BASE_SHA=$(git merge-base HEAD $GITHUB_BASE_REF)
 
       - name: Checking out relevant branches for a PR
         if: needs.pre-checks.outputs.PRE_CHECK && needs.pre-checks.outputs.PRE_CHECK == 'feature-deploy' && !(needs.pre-checks.outputs.PRE_RELEASE == 'true')
