--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -403,7 +403,7 @@ jobs:
           fi
 
       - name: check pre-release
-        if: contains('pre-release/', github.ref)
+        if: needs.pre-checks.outputs.PRE_RELEASE == 'true'
         run: |
           echo "AFFECTED_ALL=7913-$GIT_BRANCH" >> $GITHUB_ENV
 
