Add @testing-library/cypress dependency

--- a/apps/system-e2e/tsconfig.json
+++ b/apps/system-e2e/tsconfig.json
@@ -18,7 +18,7 @@
     "sourceMap": false,
     "outDir": "dist/out-tsc",
     "allowJs": true,
-    "types": ["cypress", "node"],
+    "types": ["cypress", "node", "@testing-library/cypress"],
     "module": "es2015"
   },
   "exclude": ["node_modules", "tmp"],
