--- a/package.json
+++ b/package.json
@@ -327,6 +327,7 @@
     "@storybook/react": "6.5.8",
     "@storybook/source-loader": "6.5.8",
     "@storybook/theming": "6.5.8",
+    "@testing-library/cypress": "8.0.3",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "12.1.5",
     "@testing-library/react-hooks": "7.0.2",
