--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -382,6 +382,11 @@ jobs:
           node --version
           tar zcvf generated_files.tar.gz $(./scripts/ci/get-files-touched-by.sh yarn schemas --skip-cache | xargs realpath --relative-to $(pwd))
 
+      - name: check pre-release
+        if: needs.pre-checks.outputs.PRE_RELEASE == 'true'
+        run: |
+          echo "AFFECTED_ALL=7913-$GIT_BRANCH" >> $GITHUB_ENV
+
       - name: Prepare test targets
         id: test_projects
         run: |
@@ -400,11 +405,6 @@ jobs:
           if [[ $CHUNKS != "[]" ]]; then
             echo "::set-output name=BUILD_CHUNKS::$CHUNKS"
           fi
-
-      - name: check pre-release
-        if: needs.pre-checks.outputs.PRE_RELEASE == 'true'
-        run: |
-          echo "AFFECTED_ALL=7913-$GIT_BRANCH" >> $GITHUB_ENV
 
       - name: Prepare deployment targets
         id: deploy_map
@@ -654,6 +654,18 @@ jobs:
             const updateComment = require('./.github/actions/update-comment.js')
             const { COMMENT } = process.env
             await updateComment({github, context, comment: COMMENT})
+
+      - name: Push pre-release to slack
+        if: needs.pre-checks.outputs.PRE_CHECK == 'feature-deploy' && needs.pre-checks.outputs.PRE_RELEASE == 'true'
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_PRE_RELEASE_WEBHOOK }}
+          SLACK_CHANNEL: pre-release-bot
+          SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
+          SLACK_ICON: https://github.com/rtCamp.png?size=48
+          SLACK_MESSAGE: 'Post Content :rocket:'
+          SLACK_TITLE: ${{ needs.prepare.outputs.DOCKER_TAG}}
+          SLACK_USERNAME: Pre-Release Info Bot
 
   retag-unaffected:
     runs-on: ec2-runners
