--- a/libs/clients/national-registry/v2/src/clientConfig.json
+++ b/libs/clients/national-registry/v2/src/clientConfig.json
@@ -1116,6 +1116,77 @@
         ]
       }
     },
+    "/api/v1/einstaklingar/{barn}/busetuforeldri": {
+      "get": {
+        "tags": ["Einstaklingar"],
+        "summary": "Get the list of resident parents",
+        "operationId": "Einstaklingar_GetBusetuForeldri",
+        "parameters": [
+          {
+            "name": "barn",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 1
+          },
+          {
+            "name": "X-Road-Client",
+            "in": "header",
+            "required": true,
+            "description": "Information about the x-road client",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns resident parent",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Authorization information is missing or invalid."
+          },
+          "404": {
+            "description": "No individual exists with that national id.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "There was an error on the server side.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "auth": []
+          }
+        ]
+      }
+    },
     "/api/v1/einstaklingar/{id}/samibuar": {
       "get": {
         "tags": ["Einstaklingar"],
@@ -1132,6 +1203,15 @@
               "nullable": true
             },
             "x-position": 1
+          },
+          {
+            "name": "X-Road-Client",
+            "in": "header",
+            "required": true,
+            "description": "Information about the x-road client",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
