build: fix openapi attribute injection race condition
The NX update-openapi-document command is writing json strings to a _.tmp file and reads the same file to update clientConfig.json. This change will remove the I/O read operation and feeds the string to stdin for cat to update the file

--- a/libs/clients/driving-license/project.json
+++ b/libs/clients/driving-license/project.json
@@ -25,8 +25,8 @@
         "commands": [
           "[[ '{args.apiVersion}' =~ v1|v2 ]] && >&2 echo \"Missing required --apiVersion, only v1 or v2 are valid\"",
           "curl -H \"X-Road-Client: $XROAD_CLIENT_ID\" -H \"SECRET: $DRIVING_LICENSE_SECRET\" http://localhost:8081/r1/IS-DEV/GOV/10005/Logreglan-Protected/getOpenAPI?serviceCode=RafraentOkuskirteini-{args.apiVersion} -H 'Accept: application/json' > src/{args.apiVersion}/clientConfig.json",
-          "jq '.components.schemas.ProblemDetails.additionalProperties = false' src/{args.apiVersion}/clientConfig.json > _.tmp && mv _.tmp src/{args.apiVersion}/clientConfig.json",
-          "jq '.paths[].post.requestBody.content |= (select(. != null) | with_entries(select(.key == \"application/json\")))' src/{args.apiVersion}/clientConfig.json > _.tmp && mv _.tmp src/{args.apiVersion}/clientConfig.json"
+          "cat <<< $(jq '.components.schemas.ProblemDetails.additionalProperties = false' src/{args.apiVersion}/clientConfig.json) > src/{args.apiVersion}/clientConfig.json",
+          "cat <<< $(jq '.paths[].post.requestBody.content |= (select(. != null) | with_entries(select(.key == \"application/json\")))' src/{args.apiVersion}/clientConfig.json) > src/{args.apiVersion}/clientConfig.json"
         ],
         "parallel": false,
         "cwd": "libs/clients/driving-license"
