--- a/libs/clients/driving-license-book/project.json
+++ b/libs/clients/driving-license-book/project.json
@@ -24,8 +24,8 @@
       "options": {
         "commands": [
           "curl -H \"X-Road-Client: $XROAD_CLIENT_ID\" http://localhost:8081/r1/IS-DEV/GOV/10017/Samgongustofa-Protected/getOpenAPI?serviceCode=Okunamsbok-V1 > src/clientConfig.json",
-          "jq '.paths[][].tags = [\"DrivingLicenseBook\"]' src/clientConfig.json > _.tmp && mv _.tmp src/clientConfig.json",
-          "jq '.components.schemas.ProblemDetails.additionalProperties = false' src/clientConfig.json > _.tmp && mv _.tmp src/clientConfig.json"
+          "cat <<< $(jq '.paths[][].tags = [\"DrivingLicenseBook\"]' src/clientConfig.json) > src/clientConfig.json",
+          "cat <<< $(jq '.components.schemas.ProblemDetails.additionalProperties = false' src/clientConfig.json) > src/clientConfig.json"
         ],
         "parallel": false,
         "cwd": "libs/clients/driving-license-book"
