--- a/libs/clients/rsk/company-registry/project.json
+++ b/libs/clients/rsk/company-registry/project.json
@@ -24,7 +24,7 @@
       "options": {
         "commands": [
           "curl 'http://localhost:8081/r1/IS-DEV/GOV/10006/Skatturinn/ft-v1/openapi.json' --header 'X-Road-Client: IS-DEV/GOV/10000/island-is-client' > src/clientConfig.json",
-          "jq '.paths.\"/v1/ft/search/{search_string}\".get.parameters += [{\"name\": \"offset\",\"in\": \"query\",\"schema\":{\"type\":\"integer\"}},{\"name\":\"limit\",\"in\":\"query\",\"schema\":{\"type\":\"integer\"}}]' src/clientConfig.json > _.tmp && mv _.tmp src/clientConfig.json",
+          "cat <<< $(jq '.paths.\"/v1/ft/search/{search_string}\".get.parameters += [{\"name\": \"offset\",\"in\": \"query\",\"schema\":{\"type\":\"integer\"}},{\"name\":\"limit\",\"in\":\"query\",\"schema\":{\"type\":\"integer\"}}]' src/clientConfig.json) > src/clientConfig.json",
           "echo 'WARNING: Company Registry schema has manual edits. Please check git history and verify that everything still works.'"
         ],
         "parallel": false,
