--- a/libs/clients/syslumenn/project.json
+++ b/libs/clients/syslumenn/project.json
@@ -22,7 +22,7 @@
       "options": {
         "commands": [
           "curl https://api.syslumenn.is/dev/swagger/v1/swagger.json -H 'Accept: application/json' > src/clientConfig.json",
-          "jq '.paths[][].tags = [\"Syslumenn\"]' src/clientConfig.json > _.tmp && mv _.tmp src/clientConfig.json"
+          "cat <<< $(jq '.paths[][].tags = [\"Syslumenn\"]' src/clientConfig.json) > src/clientConfig.json"
         ],
         "parallel": false,
         "cwd": "libs/clients/syslumenn"
