--- a/apps/system-e2e/project.json
+++ b/apps/system-e2e/project.json
@@ -5,6 +5,25 @@
   "prefix": "system-e2e",
   "generators": {},
   "targets": {
+    "build": {
+      "builder": "@nrwl/node:webpack",
+      "options": {
+        "outputPath": "dist/apps/system-e2e",
+        "main": "apps/system-e2e/src/does-not-matter-one-bit.ts",
+        "tsConfig": "apps/system-e2e/tsconfig.json",
+        "webpackConfig": "apps/system-e2e/webpack.config.js",
+        "maxWorkers": 2,
+        "assets": []
+      },
+      "configurations": {
+        "production": {
+          "optimization": true,
+          "extractLicenses": true,
+          "inspect": false
+        }
+      },
+      "outputs": ["{options.outputPath}"]
+    },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
