feat: add pdf endpoint from samgongustofa + excel file download

--- a/libs/clients/vehicles/src/clientConfig.json
+++ b/libs/clients/vehicles/src/clientConfig.json
@@ -24,7 +24,7 @@
     }
   ],
   "paths": {
-    "/VehicleHistoryPdf": {
+    "/VehicleReportPdf": {
       "get": {
         "tags": ["Pdf"],
         "parameters": [
